Stretch: Added animations and a fixed header with opacity bg

--- a/css/index.css
+++ b/css/index.css
@@ -169,12 +169,17 @@ p {
   }
 }
 header.container {
+  position: fixed;
+  z-index: 2;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, 0);
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding: 0 100px 3px;
   max-width: 1000px;
-  background-color: #F6F6F6;
+  background-color: rgba(246, 246, 246, 0.8);
   border-bottom: 2px solid #F1F1F1;
 }
 @media (max-width: 500px) {
@@ -197,8 +202,14 @@ header nav a {
   text-decoration: none;
   font-size: 1.6rem;
   font-weight: 700;
-  padding: 0.8rem 1.6rem;
+  padding: 0.5em 1em;
   color: #454A59;
+  transition: all 0.2s ease-in-out;
+}
+header nav a:hover {
+  color: black;
+  font-size: 1.8rem;
+  padding: 0.4em 0.9em;
 }
 footer {
   color: #22283B;
@@ -209,6 +220,11 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.home {
+  z-index: 1;
+  position: relative;
+  padding-top: 101px;
 }
 .home .intro h2 {
   padding: 15px;
@@ -287,6 +303,7 @@ footer {
 .home .walk .walk-text .btn:hover {
   color: #000;
   background-color: #F6F6F6;
+  box-shadow: 0 1px 5px rgba(119, 119, 119, 0.5);
 }
 .home .walk .walk-img {
   width: 46%;
