--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,9 @@
 // Home Content
 
 .home {
+	z-index: 1;
+	position: relative;
+	padding-top: 101px;
 
 	.intro {
 
