--- a/less/mixins.less
+++ b/less/mixins.less
@@ -48,5 +48,6 @@
 	&:hover {
 		color: @textColor;
 		background-color: @backgroundColor;
+		box-shadow: 0 1px 5px rgba(darken(@backgroundColor, 50%), .5);
 	}
 }
